<resources>
    <string name="app_name">Arla</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About Us</string>
    <string name="arla_strated_in_1880_narla_foods_is_a_cooperative_and_farmer_owned_dairy_ncompany_working_with_11_200_farmers_all_over_europe">Arla strated in 1880. \nArla Foods is a cooperative and Farmer owned dairy \ncompany, working with 11,200 farmers all over Europe</string>
    <string name="dano_mom">Dano Mom</string>
    <string name="nutrition_solution_for_pre_pregnent_npregnent_and_lactating_mothers">Nutrition Solution for Pre-Pregnent, \nPregnent and Lactating Mothers.</string>
    <string name="deelac">Deelac</string>
    <string name="the_only_infant_formula_with_prebiotics_nbest_nutrition_solution_for_infants_who_ndon_t_receive_breast_milk">The only infant formula with prebiotics; Best Nutrition solution for infants who don\'t receive breast milk.</string>
    <string name="deelac_ingredients_per_100ml">Deelac Ingredients per 100ml</string>
    <string name="_3_61">3.61</string>
    <string name="fat">FAT</string>
    <string name="_1_37">1.37</string>
    <string name="kcal_energy">KCAL ENERGY</string>
    <string name="_6_97">6.97</string>
    <string name="carbohydrates">CARBOHYDRATES</string>
    <string name="deelec_contains">Deelec Contains</string>
    <string name="prebiotics">PREBIOTICS</string>
    <string name="fos">FOS</string>
    <string name="gos">GOS</string>
    <string name="_100">100%</string>
    <string name="vitamins">VITAMINS</string>
    <string name="minerals">MINERALS</string>
    <string name="_12">12</string>
    <string name="whey_casein_ratio">Whey Casein Ratio</string>
    <string name="_70_30">70:30</string>
    <string name="affordable_pack_nfor_infants_aged_n0_to_6_months_n180g_at_220">Affordable pack \nFor infants aged: \n0 to 6 months \n180g at 220/=</string>
    <string name="for_infants_aged_n0_to_6_months_n400g_at_530">For infants aged: \n0 to 6 months \n400g at 530/=</string>
    <string name="for_infants_aged_above_6_months_n400g_at_530">For infants aged:Above 6 months \n400g at 530/=</string>
    <string name="lactose">LACTOSE</string>
    <string name="breast_milk_the_golden_standard">Breast Milk - The Golden Standard</string>
    <string name="mature_human_milk_contains">Mature Human Milk Contains</string>
    <string name="breast_milk_has">Breast Milk Has</string>
    <string name="ratio_of_whey_to_casein">RATIO OF WHEY TO CASEIN</string>
    <string name="the_stages_of_breast_milk">The Stages of Breast Milk</string>
    <string name="_90_10">90:10</string>
    <string name="colostrum">Colostrum</string>
    <string name="the_milk_for_the_first_n1_5_days">The milk for the\nfirst 1-5 days</string>
    <string name="transitional_nbrest_milk">Transitional Breast Milk</string>
    <string name="the_milk_for_the_first_n5_15_days">The milk for the\nfirst 5-15 days</string>
    <string name="the_milk_for_the_first_n15_days">The milk for the\nfirst 15+ days</string>
    <string name="_60_40">60:40</string>
    <string name="_50_50">50:50</string>
    <string name="the_milk_after_n6_months">The milk after\n6 months</string>
    <string name="_80_20">80:20</string>
    <string name="mature_milk">Mature Milk</string>
    <string name="breast_feeding_practice_in_bangladesh">Breast Feeding Practice in Bangladesh</string>
    <string name="global_scenario_of_breast_feeding">Global Scenario of Breast Feeding</string>
    <string name="competition">Competition</string>
    <string name="nutritional_comparison_of_infant_formula_per_100_ml">Nutritional comparison of Infant formula (Per 100 ml)</string>
    <string name="type_to_search">Type to Search...</string>
    <string name="ingredients">Ingredients</string>
    <string name="whey_casien_ratio">Whey:Casein ratio</string>
    <string name="fibers_pribiotics">Fibers (Prebiotics)</string>
    <string name="_0_27">0.27</string>
    <string name="folic_acid_micro_gm">Folic acid (micro gm)</string>
    <string name="energy_kcal">Energy (Kcal)</string>
    <string name="_67">67</string>
    <string name="_70">70</string>
    <string name="protein_gm">Protein (gm)</string>
    <string name="_1_39">1.39</string>
    <string name="_1_4">1.4</string>
    <string name="_16_9">16.9</string>
    <string name="carbohydrate_gm">Carbohydrate (gm)</string>
    <string name="_7_5">7.5</string>
    <string name="_7_29">7.29</string>
    <string name="lactose_gm">Lactose (gm)</string>
    <string name="_5_3">5.3</string>
    <string name="fat_gm">Fat (gm)</string>
    <string name="_3_5">3.5</string>
    <string name="_3_78">3.78</string>
    <string name="linoliec_acid_mg">Linoliec acid (mg)</string>
    <string name="_570">570</string>
    <string name="_530">530</string>
    <string name="_578">578</string>
    <string name="alpha_linolenic_acid_mg">Alpha linolenic acid (mg)</string>
    <string name="_81">81</string>
    <string name="_67_2">67.2</string>
    <string name="_61">61</string>
    <string name="_0">0</string>
    <string name="fructo_oligosacchrides">Fructo-oligosacchrides</string>
    <string name="_0_027">0.027</string>
    <string name="galacto_oligosaccharides">Galacto-oligosaccharides</string>
    <string name="_0_025">0.025</string>
    <string name="fatty_acid_gm">Fatty acid (gm)</string>
    <string name="ara_mg">ARA (mg)</string>
    <string name="dha_gm">DHA (mg)</string>
    <string name="mineral_ash_gm">Mineral (Ash)(gm)</string>
    <string name="_0_37">0.37</string>
    <string name="_0_39">0.39</string>
    <string name="_0_41">0.41</string>
    <string name="moistire_gm">Moistire (gm)</string>
    <string name="_90">90</string>
    <string name="sodium_gm">Sodium (mg)</string>
    <string name="_19">19</string>
    <string name="_22">22</string>
    <string name="_24_3">24.3</string>
    <string name="potassium_gm">Potassium (mg)</string>
    <string name="_68">68</string>
    <string name="_78">78</string>
    <string name="_78_3">78.3</string>
    <string name="chloride_gm">Chloride (mg)</string>
    <string name="_45">45</string>
    <string name="_47">47</string>
    <string name="_54">54</string>
    <string name="_49_5">49.5</string>
    <string name="calcium_gm">Calcium (mg)</string>
    <string name="_49">49</string>
    <string name="_43">43</string>
    <string name="_67_5">67.5</string>
    <string name="phosphorus_gm">Phosphorus (mg)</string>
    <string name="_30">30</string>
    <string name="_23_6">23.6</string>
    <string name="_29_5">29.5</string>
    <string name="_38_5">38.5</string>
    <string name="magnesium_gm">Magnesium (mg)</string>
    <string name="_5_2">5.2</string>
    <string name="_6_2">6.2</string>
    <string name="_6_7">6.7</string>
    <string name="_5_5">5.5</string>
    <string name="manganese_micro_gm">Manganese (micro gm)</string>
    <string name="_5_4">5.4</string>
    <string name="_11_2">11.2</string>
    <string name="_13_4">13.4</string>
    <string name="_4_9">4.9</string>
    <string name="selenium_gm">Selenium (micro gm)</string>
    <string name="_1_9">1.9</string>
    <string name="_1_55">1.55</string>
    <string name="_2">2</string>
    <string name="_1_5">1.5</string>
    <string name="iron_gm">Iron(mg)</string>
    <string name="_0_54">0.54</string>
    <string name="_0_67">0.67</string>
    <string name="_0_63">0.63</string>
    <string name="_0_70">0.70</string>
    <string name="iodin_micro_gm">Iodin (micro gm)</string>
    <string name="_15">15</string>
    <string name="_11_7">11.7</string>
    <string name="_12_2">12.2</string>
    <string name="_8_8">8.8</string>
    <string name="copper_gm">Copper (mg)</string>
    <string name="_0_039">0.039</string>
    <string name="_0_05">0.05</string>
    <string name="_0_04">0.04</string>
    <string name="_0_047">0.047</string>
    <string name="zinc_gm">Zinc (mg)</string>
    <string name="_0_52">0.52</string>
    <string name="_0_7">0.7</string>
    <string name="_0_69">0.69</string>
    <string name="_0_51">0.51</string>
    <string name="vit_a_micro_gm_r_e">Vit-A (micro gm R.E)</string>
    <string name="_74">74</string>
    <string name="_63_9">63.9</string>
    <string name="_66_5">66.5</string>
    <string name="_243_i_u">243 (I.U)</string>
    <string name="vit_d_micro_gm_d">Vit-D (micro gm D)</string>
    <string name="_0_84">0.84</string>
    <string name="_0_87">0.87</string>
    <string name="_40_5_i_u">40.5 (I.U)</string>
    <string name="vit_e_micro_gm_t_e">Vit-E (micro gm T.E)</string>
    <string name="_0_77">0.77</string>
    <string name="_0_68_i_u">0.68 (I.U)</string>
    <string name="vit_k_micro_gm">Vit-K (micro gm)</string>
    <string name="_4_7">4.7</string>
    <string name="vit_c_gm">Vit-C (mg)</string>
    <string name="_9_2">9.2</string>
    <string name="_9_6">9.6</string>
    <string name="_8_1">8.1</string>
    <string name="vit_b1_gm">Vit-B1 (mg)</string>
    <string name="_0_097">0.097</string>
    <string name="_0_053">0.053</string>
    <string name="_2000">2000</string>
    <string name="_2005">2005</string>
    <string name="_2010">2010</string>
    <string name="_2015">2015</string>
    <string name="symbiotic_prebiotics_probiotics">Symbiotic = Prebiotics + Probiotics</string>
    <string name="prebiotics_are_the_good_bacteria_that_fight_the_germs_reducing_the_risk_of_diseases_and_makes_the_immunity_system_stronger">Prebiotics are the good bacteria that fight the germs, reducing the risk of diseases and makes the immunity system stronger.</string>
    <string name="but_probiotics_can_die_with_time">BUT Probiotics can die with time</string>
    <string name="however_probiotics_fiber_does_not_get_affected_by_heat_digestive_juices_or_time">HOWEVER, Prebiotics Fiber does not get affected by heat, digestive juices, or time.</string>
    <string name="prebiotics_help_grow_probiotics_and_reduce_the_growth_of_bad_bacteria_making_the_gut_helthier_and_ensuring_stronger_immune_system">Prebiotics help to grow Good Bacteria (Probiotics) and reduce the growth of bad bacteria -making the gut healthier, and ensuring stronger immune system</string>
    <string name="dano_mom_proplustm_contains_three_probiotic_strains_abc_lactobacillus_acidophilus_nbifidobacterium_lactis_and_the_arla_patented_lactobacillus_casei_f19">Dano Mom PROPLUS™ contains three probiotic strains (ABC) Lactobacillus acidophilus, Bifidobacterium lactis and the Arla-patented Lactobacillus casei F19.</string>
    <string name="maternal_mortality_ratio">Maternal Mortality Ratio</string>
    <string name="_750">750</string>
    <string name="_500">500</string>
    <string name="_250">250</string>
    <string name="maternal_nutrition_statistics_of_bangladesh">Maternal Nutrition Statistics of Bangladesh</string>
    <string name="zinc_deficiency_affects_women">Zinc deficiency affects (women)</string>
    <string name="b12_deficiency">B12 Deficiency</string>
    <string name="deficient_in_folate">Deficient in folate</string>
    <string name="anemia">Anemia</string>
    <string name="low_birth_weight">low birth weight</string>
    <string name="_20p">20%</string>
    <string name="_40p">40%</string>
    <string name="_60p">60%</string>
    <string name="children_under_5_years">Children Under 5 years</string>
    <string name="women_15_49_years">Women 15-49 years</string>
    <string name="underweight2">Underweight</string>
    <string name="year">Year</string>
    <string name="maternal_deaths_per_100_000_live_births">\nMaternal Deaths\nper 100,000 Live Births</string>
</resources>